<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">News Up</string>
    <string name="app_version" translatable="false">Version 0.11.4</string>

    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="mycustomfeed">My custom feed</string>
    <string name="spain">Spain</string>
    <string name="sweden">Sweden</string>
    <string name="finland">Finland</string>
    <string name="international">International</string>
    <string name="technology">Technology</string>
    <string name="blogs">Blogs</string>
    <string name="magazines">Magazines</string>

    <string name="confirm">Confirm</string>
    <string name="removeall">Remove all</string>

    <string name="msg_remove_all_bm">Remove all bookmarked news</string>

    <!--  Settings -->
    <string name="mainpage">Main page</string>
    <string name="confsites">Newspapers</string>
    <string name="prefechandsave">Prefetch and save news</string>
    <string name="cleancache">Clean caché</string>
    <string name="never">Never</string>
    <string name="done">Done</string>
    <string name="notimplementedyet">Not implemented yet</string>
    <string name="apply">Apply</string>
    <string name="mainsections">Main sections</string>
    <string name="offlinesections">Offline sections</string>
    <string name="mainsites">Main sites:&#160;</string>

    <!-- Dates -->
    <string name="datetextbefore"></string>
    <string name="datetextAfterSecond">&#160;seconds ago</string>
    <string name="datetextAfterMinute">&#160;minutes ago</string>
    <string name="datetextAfterHour">&#160;hours ago</string>
    <string name="datetextAfterDay">&#160;days ago</string>
    <string name="datetextAfterMonth">&#160;months ago</string>
    <string name="datetextAfterYear">&#160;years ago</string>
    <string name="catalonia">Catalonia</string>
    <string name="sharewith">Share with</string>
    <string name="contentnotavailableyet">Content not available yet</string>
    <string name="uk">UK</string>
    <string name="us">US</string>
    <string name="allsites">All the sites</string>
    <string name="favorite">Favorite</string>
    <string name="tryagain">Try again</string>
    <string name="openinbrowser">Open in browser</string>
    <string name="close">Close</string>
    <string name="title_newsnotfound">Oops... This app is awesome but it still cannot read this news</string>
    <string name="message_newsnotfound">What should we do?</string>

</resources>