<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/settings_layout_row"
            android:onClick="onConfigureSitesToShow">

            <TextView
                android:id="@+id/conf_label_sites_title"
                style="@style/settings_row_title"
                android:text="@string/mainsites" />

            <TextView
                android:id="@+id/conf_label_sites_subtitle"
                style="@style/settings_row_subtitle" />

        </LinearLayout>

        <View style="@style/settings_divider" />

        <LinearLayout
            style="@style/settings_layout_row"
            android:onClick="onConfigureSaveTime">

            <TextView
                style="@style/settings_row_title"
                android:text="@string/scheduledonwloads" />

            <TextView
                android:id="@+id/conf_label_save_time"
                style="@style/settings_row_subtitle"
                android:text="@string/never" />

        </LinearLayout>

        <View style="@style/settings_divider" />

        <LinearLayout
            style="@style/settings_layout_row"
            android:onClick="onConfigureCleanCache">

            <TextView
                style="@style/settings_row_title"
                android:text="@string/cleancache" />

            <TextView
                android:id="@+id/conf_label_cleancache"
                style="@style/settings_row_subtitle"
                android:text="0 MB" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>