<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDD"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="20dip">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dip"
            android:src="@mipmap/ic_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/app_icon"
            android:layout_toRightOf="@+id/app_icon"
            android:paddingBottom="15dip"
            android:paddingLeft="15dip"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/app_icon"
            android:layout_alignParentRight="true"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/item_layout_main_drawer"
            android:onClick="onMyCustomFeedAction">

            <ImageView
                android:id="@+id/mcf_icon"
                style="@style/item_imageview_main_drawer"
                android:src="@mipmap/ic_app" />

            <TextView
                style="@style/item_textview_main_drawer"
                android:layout_toRightOf="@+id/mcf_icon"
                android:text="@string/mycustomfeed" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/item_layout_main_drawer"
            android:onClick="onSavedForLaterAction">

            <ImageView
                android:id="@+id/sfl_icon"
                style="@style/item_imageview_main_drawer"
                android:src="@drawable/ic_bookmark" />

            <TextView
                style="@style/item_textview_main_drawer"
                android:layout_toRightOf="@+id/sfl_icon"
                android:text="Saved for later" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/item_layout_main_drawer"
            android:onClick="onConfigurationAction">

            <ImageView
                android:id="@+id/conf_icon"
                style="@style/item_imageview_main_drawer"
                android:src="@drawable/ic_settings" />

            <TextView
                style="@style/item_textview_main_drawer"
                android:layout_toRightOf="@+id/conf_icon"
                android:text="Configuration" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/content_favs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDD" />

            <RelativeLayout
                style="@style/item_layout_main_drawer"
                android:background="#0000">

                <ImageView
                    android:id="@+id/fav_icon"
                    style="@style/item_imageview_main_drawer"
                    android:src="@drawable/ic_star" />

                <TextView
                    style="@style/item_textview_main_drawer"
                    android:layout_toRightOf="@+id/fav_icon"
                    android:text="Favorite sites" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDD" />

        <RelativeLayout
            style="@style/item_layout_main_drawer"
            android:background="#0000">

            <ImageView
                android:id="@+id/sites_icon"
                style="@style/item_imageview_main_drawer"
                android:src="@drawable/ic_all" />

            <TextView
                style="@style/item_textview_main_drawer"
                android:layout_toRightOf="@+id/sites_icon"
                android:text="All sites" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>